--- a/admin.html
+++ b/admin.html
@@ -357,21 +357,9 @@
           
           <li class="nav-item">
             <a class="nav-link" data-toggle="collapse" href="#error" aria-expanded="false" aria-controls="error">
-              <i class="icon-ban menu-icon"></i>
-              <span class="menu-title">Errores</span>
+              <i class="fa-solid fa-database"></i>
+              <span class="menu-title">Tkinder</span>
               <i class="menu-arrow"></i>
-            </a>
-            <div class="collapse" id="error">
-              <ul class="nav flex-column sub-menu">
-                <li class="nav-item"> <a class="nav-link" href="pages/samples/error-404.html" target="_blank"> 404 </a></li>
-                <li class="nav-item"> <a class="nav-link" href="pages/samples/error-500.html" target="_blank"> 500 </a></li>
-              </ul>
-            </div>
-          </li>
-          <li class="nav-item">
-            <a class="nav-link" href="pages/documentation/documentation.html" target="_blank">
-              <i class="icon-paper menu-icon"></i>
-              <span class="menu-title">Documentacion</span>
             </a>
           </li>
         </ul>
@@ -481,7 +469,7 @@
                             <div class="ml-xl-4 mt-3">
                             <p class="card-title">Analisis y desarrollo de sistemas de informcaion</p>
                               <h1 class="text-primary">A.D.S.I</h1>
-                              <p class="mb-2 mb-xl-0">El programa Tecnólogo en Análisis y Desarrollo de Sistemas de Información se creó para brindar al sector productivo nacional en general. incluyendo las fases de Análisis, Diseño, Desarrollo, Implementación, pruebas y Mantenimiento,</p>
+                              <p class="mb-2 mb-xl-0">El programa Tecnólogo en Análisis y Desarrollo de Sistemas de Información se creó para brindar al sector productivo nacional en general. incluyendo las fases de Análisis, Diseño, Desarrollo, Implementación, pruebas y Mantenimiento.</p>
                             </div>  
                             </div>
                           <div class="col-md-12 col-xl-9">
