--- a/admin.html
+++ b/admin.html
@@ -356,7 +356,7 @@
           </li>
           
           <li class="nav-item">
-            <a class="nav-link" data-toggle="collapse" href="#error" aria-expanded="false" aria-controls="error">
+            <a class="nav-link" data-toggle="collapse" href="#icons" aria-expanded="false" aria-controls="icons">
               <i class="fa-solid fa-database"></i>
               <span class="menu-title"> Tkinder</span>
               <i class="menu-arrow"></i>
