--- a/admin.html
+++ b/admin.html
@@ -354,12 +354,10 @@
               </ul>
             </div>
           </li>
-          
+         
           <li class="nav-item">
-            <a class="nav-link" data-toggle="collapse" href="#icons" aria-expanded="false" aria-controls="icons">
-              <i class="fa-solid fa-database"></i>
-              <span class="menu-title"> Tkinder</span>
-              <i class="menu-arrow"></i>
+              <i class="icon-paper menu-icon"></i>
+              <span class="menu-title">Tkinder</span>
             </a>
           </li>
         </ul>
