--- a/admin.html
+++ b/admin.html
@@ -357,7 +357,7 @@
           
           <li class="nav-item">
             <a class="nav-link" data-toggle="collapse" href="#error" aria-expanded="false" aria-controls="error">
-              <i class="icon-ban menu-icon"></i>
+              <i class="fa-solid fa-layer-group"></i>
               <span class="menu-title">Tkinder</span>
               <i class="menu-arrow"></i>
             </a>
