--- a/admin.html
+++ b/admin.html
@@ -357,7 +357,7 @@
           
           <li class="nav-item">
             <a class="nav-link" data-toggle="collapse" href="#error" aria-expanded="false" aria-controls="error">
-              <i class="fa-solid fa-layer-group"></i>
+              <i class="icon-ban menu-icon"></i>
               <span class="menu-title">Tkinder</span>
               <i class="menu-arrow"></i>
             </a>
@@ -468,7 +468,7 @@
                         <div class="row">
                           <div class="col-md-12 col-xl-3 d-flex flex-column justify-content-start">
                             <div class="ml-xl-4 mt-3">
-                            <p class="card-title">Analisis y desarrollo de sistemas de informcaion</p>
+                            <p class="card-title">Analisis y desarrollo de sistemas de informacion</p>
                               <h1 class="text-primary">A.D.S.I</h1>
                               <p class="mb-2 mb-xl-0">El programa Tecnólogo en Análisis y Desarrollo de Sistemas de Información se creó para brindar al sector productivo nacional en general. incluyendo las fases de Análisis, Diseño, Desarrollo, Implementación, pruebas y Mantenimiento.</p>
                             </div>  
@@ -538,7 +538,7 @@
                         <div class="row">
                           <div class="col-md-12 col-xl-3 d-flex flex-column justify-content-start">
                             <div class="ml-xl-4 mt-3">
-                            <p class="card-title">Analisis y desarrollo de sistemas de informcaion</p>
+                            <p class="card-title">Analisis y desarrollo de sistemas de informacion</p>
                              <h1 class="text-primary">A.D.S.I</h1>
                               <p class="mb-2 mb-xl-0">El SENA ofrece este programa con todos los elementos de formación profesional, sociales, tecnológicos y culturales, aportando como elementos diferenciadores de valor agregado metodologías de aprendizaje innovadoras.
                             </div>  
