--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
   <!-- plugins:css -->
   <link rel="stylesheet" href="vendors/feather/feather.css">
   <link rel="stylesheet" href="vendors/ti-icons/css/themify-icons.css">
-  <link rel="stylesheet" href=vendors/css/vendor.bundle.base.css">
+  <link rel="stylesheet" href="vendors/css/vendor.bundle.base.css">
   <!-- endinject -->
   <!-- Plugin css for this page -->
   <!-- End plugin css for this page -->
@@ -27,7 +27,7 @@
           <div class="col-lg-4 mx-auto">
             <div class="auth-form-light text-left py-5 px-4 px-sm-5">
               <div class="brand-logo text-center">
-                <img src="images/logo.png" alt="logo">
+                <img src="images/adsilogo.gif" alt="logo">
               </div>
               <h4>Bienvenido! Iniciar Sesión</h4>
               <h6 class="font-weight-light">Continuar</h6>
