--- a/admin.html
+++ b/admin.html
@@ -306,7 +306,7 @@
               <i class="icon-grid-2 menu-icon"></i>
               <span class="menu-title">Javascript 6</span>
               <i class="menu-arrow"></i>
-            </a>
+            </a> 
             <div class="collapse" id="tables">
               <ul class="nav flex-column sub-menu">
                 <li class="nav-item"><a class="nav-link" href="JavaScript/Actividad_1/index.html" target="_blank">Actividad 1</a></li>
@@ -356,14 +356,17 @@
           </li>
           
           <li class="nav-item">
-            <a class="nav-link" data-toggle="collapse" href="#error" aria-expanded="false" aria-controls="error">
-              <i class="icon-ban menu-icon"></i>
+            <a class="nav-link" data-toggle="collapse" href="#icons" aria-expanded="false" aria-controls="icons">
+              <i class="icon-paper menu-icon"></i>
               <span class="menu-title">Tkinder</span>
               <i class="menu-arrow"></i>
             </a>
-            
+            <div class="collapse" id="icons">
+              <ul class="nav flex-column sub-menu">
+                <li class="nav-item"><a class="nav-link" href="">En Espera...</a></li>
+              </ul>
+            </div>
           </li>
-        </ul>
       </nav>
 
       <!-- partial -->
