--- a/admin.html
+++ b/admin.html
@@ -358,7 +358,7 @@
           <li class="nav-item">
             <a class="nav-link" data-toggle="collapse" href="#icons" aria-expanded="false" aria-controls="icons">
               <i class="icon-paper menu-icon"></i>
-              <span class="menu-title">Tkinder</span>
+              <span class="menu-title">Tkinter</span>
               <i class="menu-arrow"></i>
             </a>
             <div class="collapse" id="icons">
